[package]
name = "voting"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Created with Anchor"

[lib]
crate-type = ["cdylib", "lib"]
name = "voting"

[dependencies]
anchor-lang = "1.1.2"

[dev-dependencies]
litesvm = "0.10.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"

[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-log-ix-name = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
